<resources>
    <string name="app_name" translatable="false">Beesness</string>
    <string name="exampleName">John Doe</string>
    <string name="exampleEmail">your-email@example.com</string>
    <string name="examplePhonenum">088xxxxxxx</string>
    <string name="labelPhonenum">Phone Number</string>
    <string name="labelPassword">Password</string>
    <string name="placeholderPassword">password</string>
    <string name="labelConfirmPassword">Confirm Password</string>
    <string name="signUpBtnPlaceholder">Sign Up</string>
    <string name="createAccountText">Create Account</string>
    <string name="signInText">Sign in to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>