<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="80dp"
    android:background="@color/white">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_centerVertical="true"
        tools:context=".views.LoginActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome to"
            android:id="@+id/tvWelcome"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/loginlogo"
            android:id="@+id/loginLogo"
            android:layout_marginBottom="20dp"
            android:layout_below="@+id/tvWelcome"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSignIn"
            android:textSize="16sp"
            android:text="@string/createAccountText"
            android:layout_below="@+id/loginLogo"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:textStyle="normal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/formLogin"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvSignIn"
            android:layout_marginVertical="40dp"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelSignUpName"
                android:text="Name"
                android:labelFor="@+id/etSignUpName"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSignUpName"
                android:hint="@string/exampleName"
                android:layout_marginBottom="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelSignUpEmail"
                android:text="Email"
                android:labelFor="@+id/etSignUpEmail"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSignUpEmail"
                android:hint="@string/exampleEmail"
                android:layout_marginBottom="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelSignUpPhonenum"
                android:text="@string/labelPhonenum"
                android:labelFor="@+id/etSignUpPhonenum"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSignUpPhonenum"
                android:hint="@string/examplePhonenum"
                android:inputType="phone"
                android:layout_marginBottom="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelSignUpPassword"
                android:text="@string/labelPassword"
                android:labelFor="@+id/etSignUpPassword"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSignUpPassword"
                android:hint="@string/placeholderPassword"
                android:inputType="textPassword"
                android:layout_marginBottom="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelSignUpConfirmPassword"
                android:text="@string/labelConfirmPassword"
                android:labelFor="@+id/etSignUpConfirmPassword"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etSignUpConfirmPassword"
                android:hint="@string/placeholderPassword"
                android:inputType="textPassword"
                android:layout_marginBottom="12dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnSignUp"
                android:text="@string/signUpBtnPlaceholder"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/honey_primary"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account? "
                    android:id="@+id/yesAccount"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login here"
                    android:textColor="@color/blue_link"
                    android:layout_toEndOf="@id/yesAccount"/>
            </RelativeLayout>
        </LinearLayout>



    </RelativeLayout>
</RelativeLayout>
